# fazm

./: .gitignore  CHANGELOG.json  CLAUDE.md  README.md  build.sh  codemagic.yaml  release.sh  reset-and-run.sh  run.sh
.github/workflows/: deploy-backend.yml
Backend/: .env.example  .gcloudignore  Cargo.toml  Dockerfile  run.sh
Backend/src/: auth.rs  config.rs  firestore.rs  main.rs
Backend/src/routes/: appcast.rs  mod.rs  relay.rs  releases.rs  session_recording.rs  stripe.rs  vertex.rs
Desktop/: Package.swift
Desktop/Sources/: AnalyticsManager.swift  AppDatabase.swift  AppDatabaseModels.swift  AppManagementSetup.swift  AppState.swift  AudioCaptureService.swift  AudioDeviceManager.swift  AuthService.swift  BrowserExtensionSetup.swift  ChatMessageStore.swift  CodexBackendManager.swift  DeletedTypeStubs.swift  FazmApp.swift  FeedbackView.swift  GeminiAnalysisService.swift  InstanceLock.swift  LaunchAtLoginManager.swift  MCPServerManager.swift  OnboardingChatView.swift  OnboardingView.swift  PostHogManager.swift  QuickReplyButtons.swift  ResourceMonitor.swift  SessionRecordingManager.swift  SessionRecordingPermissionWindow.swift  SignInView.swift  SkillInstaller.swift  ToastManager.swift  (+4 more)
Installer/: Info.plist
acp-bridge/: browser-overlay-init-page.js  browser-overlay-init.js  package-lock.json  package.json
dmg-assets/: DS_Store
docs/: observer-session-spec.md
inbox/: SKILL.md
scripts/: check_search_coverage.sh  check_settings_search.swift  deploy-appcast.sh  generate-appcast.sh  promote_release.sh
web/: next.config.ts  package.json
(+100 files in other folders)
